--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </a>
         </h1>
     </div>
-    <div class="footer">©2020 Codoxia Creators. All Rights Reserved. Design by AhsanParadise</div>
+    <div class="footer"> Copyright © 2020 - All rights Reserved - Designed by AhsanParadise </div>
 
     <!--=====================================================
 			JavaScript Files
